--- a/index.html
+++ b/index.html
@@ -48,9 +48,14 @@
                       <h1>Ristorante con Fusion</h1>
                       <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                   </div>
-                  <div class="col-12 col-sm align-self-center">
+                  <div class="col-12 col-sm-3 align-self-center">
                       <img src="images/img/logo.png" class="img-fluid">
                   </div>
+
+                  <div class="col-12 col-sm-3 align-self-center">
+                      <a class="btn btn-warning btn-block btn-lg" role="button" href="#reservetable">Reserve a Table<a/>
+                  </div>
+
               </div>
           </div>
       </header>
@@ -60,31 +65,41 @@
               <div class = "col-12 col-sm-6 order-sm-last" >
                   <h3>Our Lipsmacking Culinary Creations</h3>
               </div>
-              <div class = "col-12 col-sm order-sm-first">
-                <div class="media">
-                  <img class="d-flex mr-3 img-thumbnail align-self-center"
-                          src="images/img/uthappizza.png" alt="Uthappizza">
-                  <div class="media-body">
-                      <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span> </h2>
-                      <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
-                          Italian pizza, topped with Cerignola olives, ripe vine
-                          cherry tomatoes, Vidalia onion, Guntur chillies and
-                          Buffalo Paneer.</p>
-                  </div>
-              </div>
+                <div class = "col-12 col-sm order-sm-first">
+                  <div class="media">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center"
+                            src="images/img/uthappizza.png" alt="Uthappizza">
+                    <div class="media-body">
+                        <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span> </h2>
+                        <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
+                            Italian pizza, topped with Cerignola olives, ripe vine
+                            cherry tomatoes, Vidalia onion, Guntur chillies and
+                            Buffalo Paneer.
+                        </p>
+                    </div>
+                </div>
               </div>
           </div>
 
 
           <div class="row row-content align-items-center">
-              <div class = "col-12 col-sm-6">
+              <div class = "col-8 col-sm-3">
                   <h3>This Month's Promotions</h3>
               </div>
-              <div class = "col-12 col-sm">
-                  <h2>Weekend Grand Buffet</h2>
-                  <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+              <div class="media col-sm-9">
+              <div class="media-body">
+                  <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                  <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person.</p>
+              </div>
+              <img class="d-flex ml-3 img img-thumbnail align-self-center"
+                      src="images/img/buffet.png" alt="Uthappizza">
               </div>
           </div>
+
+
+
+
+
 
           <div class="row row-content align-items-center">
               <div class = "col-12 col-sm-6 order-sm-last">
@@ -103,12 +118,84 @@
                           creating mouthwatering Indo-Italian fusion experiences.
                           </p>
                   </div>
-              </div>
+                </div>
               </div>
           </div>
-      </div>
 
-      <footer>
+
+
+
+
+
+          <div class="row row-content">
+            <div class="col-12 offset-2 col-sm-8">
+              <div class="card">
+                <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                  <div class="card-body">
+                    <div>
+                      <form id="reservetable">
+                        <div class="form-group row">
+                          <label for="noofguests" class="col-md-2 col-form-label">Number of Guests</label>
+                          <div class="col-md-10">
+                            <div class="form-check">
+                              <div class="row">
+                                <div class="col-1">
+                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                                <label class="form-check-label" for="flexRadioDefault1"> 1 </label>
+                                </div>
+
+                                <div class="form-check col-1">
+                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                                <label class="form-check-label" for="flexRadioDefault1"> 2 </label>
+                                </div>
+
+                                <div class="form-check col-1">
+                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                                <label class="form-check-label" for="flexRadioDefault1"> 3 </label>
+                                </div>
+
+                                <div class="form-check col-1">
+                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                                <label class="form-check-label" for="flexRadioDefault1"> 4 </label>
+                                </div>
+
+                                <div class="form-check col-1">
+                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                                <label class="form-check-label" for="flexRadioDefault1"> 5 </label>
+                                </div>
+
+                                <div class="form-check col-1">
+                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                                <label class="form-check-label" for="flexRadioDefault1"> 6 </label>
+                                </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="form-group row">
+                        <label for="noofguests" class="col-sm-2 col-form-label">Date and Time</label>
+                        <div class="col-sm-3">
+                            <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                        </div>
+                        <div class="col-sm-3">
+                            <input type="text" class="form-control" id="time" name="time" placeholder="Time">
+                        </div>
+                      </div>
+
+                      <div class="form-group row">
+                        <div class="offset-sm-2 col-sm-10">
+                          <button type="submit" class="btn btn-primary">Reserve</button>
+                        </div>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+                </div>
+              </div>
+            </div>
+</div>
+      <footer bgcolor="blue">
           <div class="container">
               <div class="row" >
                   <div class="col-4 order-sm-first col-sm-2">
